force-app/main/default/objects/Activity/fields/Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Id__c</fullName>
    <displayFormat>AI-{00000}</displayFormat>
    <label>Activity Id</label>
    <type>AutoNumber</type>
</CustomField>