force-app/main/default/objects/Activity/fields/Log_A__c.field-meta.xml
<CustomField>
    <fullName>Log_A__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Log A Call Number</label>
    <type>AutoNumber</type>
</CustomField>