force-app/main/default/objects/Activity/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to Send Email</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>