force-app/main/default/objects/Activity/fields/Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is find what type of communication we need to trigger</description>
    <label>Send SMS</label>
    <type>Checkbox</type>
</CustomField>