force-app/main/default/objects/Activity/fields/Send_WhatsAPP__c.field-meta.xml
<CustomField>
    <fullName>Send_WhatsAPP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox used for send Whatsapp</description>
    <label>Send WhatsAPP</label>
    <type>Checkbox</type>
</CustomField>