force-app/main/default/objects/Activity/fields/Subjest__c.field-meta.xml
<CustomField>
    <fullName>Subjest__c</fullName>
    <label>Subjest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>